--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>jtravis</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.7</version>
+        </dependency>
     </dependencies>
 
 </project>
