--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.martiansoftware</groupId>
+            <artifactId>jsap</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
