Better management of PR to retrieve from GH API the repository containing the commit of the PR and the head commit to do the merge

--- a/jtravis/pom.xml
+++ b/jtravis/pom.xml
@@ -24,7 +24,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.kohsuke</groupId>
+            <artifactId>github-api</artifactId>
+            <version>1.82</version>
+        </dependency>
     </dependencies>
 
 </project>
