jTravis: add a logger to spot bug in requests.

--- a/jtravis/pom.xml
+++ b/jtravis/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>github-api</artifactId>
             <version>1.82</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.7</version>
+        </dependency>
     </dependencies>
 
 </project>
