--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>wagon-http-lightweight</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-report-parser</artifactId>
+            <version>2.19.1</version>
+        </dependency>
     </dependencies>
 
     <build>
