RepairNator: fix java version in pom.xml and explicit a generic type.

--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>repairnator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>fr.inria.spirals</groupId>
