--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -75,6 +75,11 @@
             <version>2.8</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <version>3.3.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-report-parser</artifactId>
             <version>2.19.1</version>
