--- a/jtravis/pom.xml
+++ b/jtravis/pom.xml
@@ -41,6 +41,12 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>2.7.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
