--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 .idea/
 *.iml
-repairnator/local_project_list.txt
+local_project_list.txt
 workspace/
 *.z3
 output/
