--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>nopol</artifactId>
             <version>0.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model-builder</artifactId>
+            <version>3.3.9</version>
+        </dependency>
     </dependencies>
 
     <build>
