RepairNator: add a new serializer to automatically push data on Google Spreadsheet

--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -54,6 +54,21 @@
             <artifactId>maven-model-builder</artifactId>
             <version>3.3.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-sheets</artifactId>
+            <version>v4-rev51-1.22.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.22.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-jetty</artifactId>
+            <version>1.22.0</version>
+        </dependency>
     </dependencies>
 
     <build>
