--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-report-parser</artifactId>
-            <version>2.19.1</version>
+            <version>2.19.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>fr.inria.lille.adam</groupId>
