--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: true
 jdk: oraclejdk8
 
 before_install:
-  - chmod +x -R scripts/
+  - chmod +x -R travis/
 
 install: "./travis/travis-install.sh"
 script: "./travis/travis-run.sh"
