--- a/jtravis/pom.xml
+++ b/jtravis/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>jtravis</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
