--- a/travisFilter/pom.xml
+++ b/travisFilter/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>jtravis</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.martiansoftware</groupId>
+            <artifactId>jsap</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
