--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>fr.inria.spirals</groupId>
     <artifactId>repairnator</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>repairnator-pipeline</module>
+        <module>repairnator-core</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -79,6 +84,16 @@
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>fr.inria.spirals</groupId>
+            <artifactId>repairnator-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inria.spirals</groupId>
+            <artifactId>repairnator-pipeline</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
