--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>repairnator-pipeline</module>
         <module>repairnator-core</module>
+        <module>repairnator-scanner</module>
     </modules>
 
     <properties>
@@ -85,46 +86,10 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>fr.inria.spirals</groupId>
-            <artifactId>repairnator-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.inria.spirals</groupId>
-            <artifactId>repairnator-pipeline</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>fr.inria.spirals.repairnator.Launcher</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <!-- descriptor>src/main/assembly/project.xml</descriptor -->
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id><!-- this is used for inheritance merges -->
-                        <phase>package</phase><!-- append to the packaging phase. -->
-                        <goals>
-                            <goal>single</goal><!-- goals == mojos -->
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -145,5 +110,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
