Refactor Launcher completely. Move config to be in core module.

--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -15,6 +15,7 @@
     </modules>
 
     <properties>
+        <default.encoding>UTF-8</default.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
