Refactor steps to push datas.

--- a/repairnator/repairnator-core/src/main/resources/config.ini
+++ b/repairnator/repairnator-core/src/main/resources/config.ini
@@ -2,11 +2,14 @@
 filemode=slug
 lookupHours=1
 clean=true
-push=false
 workspacePath=./workspace
 
 [repair]
 z3path=
+
+[push]
+push=false
+pushRemoteRepo=https://github.com/Spirals-Team/librepair-experiments
 
 [serialization]
 json=true
