--- a/repairnator/repairnator-core/src/test/resources/example_config.ini
+++ b/repairnator/repairnator-core/src/test/resources/example_config.ini
@@ -2,11 +2,14 @@
 filemode=build
 lookupHours=4
 clean=true
-push=true
 workspacePath=/tmp
 
 [repair]
 z3path=/tmp/z3/z3_for_linux
+
+[push]
+push=true
+pushRemoteRepo=
 
 [serialization]
 json=false
