--- a/repairnator/repairnator-pipeline/src/test/resources/test-abstractstep/complex-maven-project/a-first/subsub-notvisited/pom.xml
+++ b/repairnator/repairnator-pipeline/src/test/resources/test-abstractstep/complex-maven-project/a-first/subsub-notvisited/pom.xml
@@ -91,7 +91,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fr.inria.spirals.repairnator.Launcher</mainClass>
+                            <mainClass>fr.inria.spirals.repairnator.pipeline.Launcher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
