Refactor repairnator-pipeline to be used in standalone.

--- a/repairnator/repairnator-core/src/main/resources/repairconfig.ini
+++ b/repairnator/repairnator-core/src/main/resources/repairconfig.ini
@@ -15,5 +15,5 @@ pushRemoteRepo=https://github.com/Spirals-Team/librepair-experiments
 json=true
 jsonOutputPath=/tmp
 googleSecretPath=./client_secret.json
-
+spreadsheetID=
 
