Start to work on the pool for docker launch.

--- a/repairnator/.gitignore
+++ b/repairnator/.gitignore
@@ -1,2 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
 client_secret.json
+dockerImage/.credentials
+dockerImage/repairnator-pipeline.jar
+dockerImage/client_secret.json
