--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -12,6 +12,7 @@
         <module>repairnator-pipeline</module>
         <module>repairnator-core</module>
         <module>repairnator-scanner</module>
+        <module>repairnator-dockerpool</module>
     </modules>
 
     <properties>
