--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -26,6 +26,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>fr.inria.spirals</groupId>
             <artifactId>jtravis</artifactId>
             <version>1.0-SNAPSHOT</version>
