Create a proper runner for creating/launching docker container. Move scanner launcher to avoid ambiguity in launch.

--- a/repairnator/repairnator-scanner/pom.xml
+++ b/repairnator/repairnator-scanner/pom.xml
@@ -34,7 +34,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fr.inria.spirals.repairnator.Launcher</mainClass>
+                            <mainClass>fr.inria.spirals.repairnator.scanner.Launcher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
