Change pipeline to now use directly an acces token instead of a credential file

--- a/repairnator/dockerImage/Dockerfile
+++ b/repairnator/dockerImage/Dockerfile
@@ -4,9 +4,6 @@ LABEL Description="Repairnator Pipeline docker image" Vendor="Spirals" Version="
 
 VOLUME ["/var/log/"]
 RUN echo "Europe/Paris" > /etc/timezone
-RUN mkdir /root/.credentials
-ADD .credentials /root/.credentials
-COPY client_secret.json /root/
 COPY repairconfig.ini /root/
 COPY repairnator-pipeline.jar /root/
 COPY z3_for_linux /root/
@@ -22,6 +19,7 @@ ENV GITHUB_OAUTH=
 ENV BUILD_ID=
 ENV LOG_FILENAME=
 ENV RUN_ID=
+ENV GOOGLE_ACCESS_TOKEN
 
 WORKDIR /root
-ENTRYPOINT java -cp $JAVA_HOME/lib/tools.jar:repairnator-pipeline.jar -Dlogback.configurationFile=/root/logback.xml fr.inria.spirals.repairnator.pipeline.Launcher -m repair -d -b $BUILD_ID --runId $RUN_ID
+ENTRYPOINT java -cp $JAVA_HOME/lib/tools.jar:repairnator-pipeline.jar -Dlogback.configurationFile=/root/logback.xml fr.inria.spirals.repairnator.pipeline.Launcher -m repair -d -b $BUILD_ID --runId $RUN_ID -g $GOOGLE_ACCESS_TOKEN
