Creation MongoConnection and add the mongodb serializer to different launchers

--- a/repairnator/dockerImage/repairconfig.ini
+++ b/repairnator/dockerImage/repairconfig.ini
@@ -12,7 +12,9 @@ push=true
 pushRemoteRepo=https://github.com/Spirals-Team/librepair-experiments
 
 [serialization]
-json=false
-jsonOutputPath=/tmp
+json=true
+jsonOutputPath=/var/www/html/repairnator
+mongoDBURI=
+mongoDBName=
 
 
