Some changes in bash script to consider optional arguments

--- a/repairnator/dockerImage/Dockerfile
+++ b/repairnator/dockerImage/Dockerfile
@@ -9,8 +9,9 @@ COPY repairnator-pipeline.jar /root/
 COPY z3_for_linux /root/
 COPY logback.xml /root/
 COPY configure_git.sh /root/
+COPY pipeline_launcher.sh /root/
 
-RUN chmod +x /root/configure_git.sh
+RUN chmod +x /root/*.sh
 RUN /root/configure_git.sh
 
 ENV M2_HOME=$MAVEN_HOME
@@ -28,4 +29,4 @@ ENV OUTPUT=
 ENV PUSH_URL=
 
 WORKDIR /root
-ENTRYPOINT java -cp $JAVA_HOME/lib/tools.jar:repairnator-pipeline.jar -Dlogback.configurationFile=/root/logback.xml fr.inria.spirals.repairnator.pipeline.Launcher -m $REPAIR_MODE -d -b $BUILD_ID --runId $RUN_ID -g $GOOGLE_ACCESS_TOKEN --spreadsheet $SPREADSHEET_ID -o $OUTPUT --dbhome $MONGODB_HOME --dbname $MONGODB_NAME --pushurl $PUSH_URL
+ENTRYPOINT pipeline_launcher.sh
