--- a/repairnator/dockerImage/Dockerfile
+++ b/repairnator/dockerImage/Dockerfile
@@ -27,6 +27,8 @@ ENV MONGODB_HOST=
 ENV MONGODB_NAME=
 ENV OUTPUT=
 ENV PUSH_URL=
+ENV SMTP_SERVER=
+ENV NOTIFYTO=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
