--- a/repairnator/dockerImage/Dockerfile
+++ b/repairnator/dockerImage/Dockerfile
@@ -28,7 +28,7 @@ ENV MONGODB_NAME=
 ENV OUTPUT=
 ENV PUSH_URL=
 ENV SMTP_SERVER=
-ENV NOTIFYTO=
+ENV NOTIFY_TO=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
