Implement notification mechanism with a Mail sender for now. (#169)
* Implement notification mechanism with a Mail sender for now.

* Rename a variable

* Fix scripts

* Fix a typo with argument name

--- a/repairnator/dockerImage/Dockerfile
+++ b/repairnator/dockerImage/Dockerfile
@@ -27,6 +27,8 @@ ENV MONGODB_HOST=
 ENV MONGODB_NAME=
 ENV OUTPUT=
 ENV PUSH_URL=
+ENV SMTP_SERVER=
+ENV NOTIFY_TO=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
