--- a/repairnator/dockerImage/Dockerfile
+++ b/repairnator/dockerImage/Dockerfile
@@ -7,10 +7,12 @@ RUN echo "Europe/Paris" > /etc/timezone
 
 COPY z3_for_linux /root/
 COPY logback.xml /root/
+COPY configure_git.sh /root/
 COPY build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
 
 RUN chmod +x /root/*.sh
+RUN /root/configure_git.sh
 RUN /root/build_repairnator.sh
 
 ENV M2_HOME=$MAVEN_HOME
