--- a/repairnator/dockerImage/Dockerfile
+++ b/repairnator/dockerImage/Dockerfile
@@ -3,7 +3,6 @@ FROM maven:3.3.9-jdk-8
 LABEL Description="Repairnator Pipeline docker image" Vendor="Spirals" Version="0.0.0"
 
 VOLUME ["/var/log/"]
-RUN echo "Europe/Paris" > /etc/timezone
 
 COPY z3_for_linux /root/
 COPY logback.xml /root/
@@ -11,9 +10,7 @@ COPY configure_git.sh /root/
 COPY build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
 
-RUN chmod +x /root/*.sh
-RUN /root/configure_git.sh
-RUN /root/build_repairnator.sh
+RUN echo "Europe/Paris" > /etc/timezone && apt-get install cloc && chmod +x /root/*.sh && /root/configure_git.sh && /root/build_repairnator.sh
 
 ENV M2_HOME=$MAVEN_HOME
 ENV GITHUB_LOGIN=
