Create a dedicated script for checkbranches using a pool of docker container

--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -13,6 +13,7 @@
         <module>repairnator-core</module>
         <module>repairnator-scanner</module>
         <module>repairnator-dockerpool</module>
+        <module>repairnator-checkbranches</module>
     </modules>
 
     <properties>
