--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -19,14 +19,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>fr.inria.spirals</groupId>
-            <artifactId>jtravis</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <artifactId>repairnator-core</artifactId>
             <groupId>fr.inria.spirals</groupId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
     </dependencies>
 </project>
