--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.3</version>
+        </dependency>
     </dependencies>
 </project>
