--- a/jtravis/pom.xml
+++ b/jtravis/pom.xml
@@ -92,6 +92,11 @@
                     <argLine>${argLine}</argLine>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.2.3</version>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
