--- a/repairnator/repairnator-pipeline/pom.xml
+++ b/repairnator/repairnator-pipeline/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>repairnator-pipeline</artifactId>
 
+    <repositories>
+        <repository>
+            <id>apache-snapshots</id>
+            <name>apache-snapshots</name>
+            <url>https://repository.apache.org/content/groups/snapshots/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>fr.inria.spirals</groupId>
