--- a/repairnator/repairnator-pipeline/pom.xml
+++ b/repairnator/repairnator-pipeline/pom.xml
@@ -41,9 +41,9 @@
             <version>2.21.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>fr.inria.lille.adam</groupId>
+            <groupId>fr.inria.gforge.spirals</groupId>
             <artifactId>nopol</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
