refactoring: get dependencies from repository (#381)
* Add another sandbox script

* Get rid of compiling dependencies each time.

* Manage cache and fix id with repositories

* change some revisions in dependencies

* Add missing snapshot repository for apache surefire

* Fix version of Nopol

* Ignore astor test for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ jdk: openjdk8
 before_install:
   - chmod +x -R travis/
 
-install: "./travis/travis-install.sh"
 script: "./travis/travis-run.sh"
 
 cache:
   directories:
     - $HOME/.m2
+
+before_cache:
+  - rm -f $HOME/.m2/repository/fr/inria/spirals
