Working on a new mode in repairnator to inspect in realtime travis/jobs

--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>repairnator-realtime</artifactId>
 
+    <dependencies>
+        <dependency>
+            <artifactId>repairnator-dockerpool</artifactId>
+            <groupId>fr.inria.spirals</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
