--- a/repairnator/repairnator-dockerpool/pom.xml
+++ b/repairnator/repairnator-dockerpool/pom.xml
@@ -19,6 +19,16 @@
             <version>8.1.2</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+        <dependency>
             <groupId>fr.inria.spirals</groupId>
             <artifactId>repairnator-core</artifactId>
             <version>1.0-SNAPSHOT</version>
