Keep a cache of already observed builds in order to avoid replicating multiple times the build

--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -17,6 +17,11 @@
             <groupId>fr.inria.spirals</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
