--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -9,29 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>repairnator-dockerpool</artifactId>
-
+    <artifactId>repairnator-realtime</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.spotify</groupId>
-            <artifactId>docker-client</artifactId>
-            <version>8.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.8.8</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.8.8</version>
-        </dependency>
-        <dependency>
+            <artifactId>repairnator-dockerpool</artifactId>
             <groupId>fr.inria.spirals</groupId>
-            <artifactId>repairnator-core</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
         </dependency>
     </dependencies>
 
@@ -50,7 +39,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fr.inria.spirals.repairnator.dockerpool.Launcher</mainClass>
+                            <mainClass>fr.inria.spirals.repairnator.realtime.RTLauncher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
