Use first release of Jtravis

--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>fr.inria.jtravis</groupId>
             <artifactId>jtravis</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>com.martiansoftware</groupId>
