Improve check branches

--- a/repairnator/checkbranches-dockerimage/Dockerfile
+++ b/repairnator/checkbranches-dockerimage/Dockerfile
@@ -10,6 +10,7 @@ ENV M2_HOME=$MAVEN_HOME
 
 ENV REPOSITORY=
 ENV BRANCH_NAME=
+ENV HUMAN_PATCH=
 
 WORKDIR /root
-ENTRYPOINT /root/check_branches.sh $REPOSITORY $BRANCH_NAME
+ENTRYPOINT /root/check_branches.sh $REPOSITORY $BRANCH_NAME $HUMAN_PATCH
