Change scanner output for Bears and allow pipeline to be executed with pair of buggy and fixer builds given as input

--- a/repairnator/pipeline-dockerimage/Dockerfile
+++ b/repairnator/pipeline-dockerimage/Dockerfile
@@ -22,6 +22,7 @@ ENV GITHUB_LOGIN=
 ENV GITHUB_OAUTH=
 ENV REPAIR_MODE=
 ENV BUILD_ID=
+ENV NEXT_BUILD_ID=
 ENV LOG_FILENAME=
 ENV RUN_ID=
 ENV GOOGLE_ACCESS_TOKEN=
