--- a/repairnator/repairnator-pipeline/pom.xml
+++ b/repairnator/repairnator-pipeline/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-report-parser</artifactId>
-            <version>2.21.0-SNAPSHOT</version>
+            <version>2.21.0</version>
         </dependency>
         <dependency>
             <groupId>fr.inria.gforge.spirals</groupId>
