Create docker-images/shared-files directory and move files into there (ps: still with a script for Bears to be removed...testing)

--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -4,11 +4,11 @@ LABEL Description="Repairnator Pipeline docker image" Vendor="Spirals" Version="
 
 VOLUME ["/var/log/"]
 
-COPY z3_for_linux /root/
+COPY ../shared-files/z3_for_linux /root/
 COPY projects_to_ignore.txt /root/
-COPY logback.xml /root/
-COPY configure_git.sh /root/
-COPY build_repairnator.sh /root/
+COPY ../shared-files/logback.xml /root/
+COPY ../shared-files/configure_git.sh /root/
+COPY ../shared-files/build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
 
 RUN chmod +x /root/*.sh
