Also display version properties in scanner. Change script to use now a more clean way to get jars instead of copying them.

--- a/repairnator/repairnator-scanner/pom.xml
+++ b/repairnator/repairnator-scanner/pom.xml
@@ -17,6 +17,11 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
